# ChangeLog for dev-libs/gf2x
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/gf2x/ChangeLog,v 1.10 2011/05/14 09:56:27 tomka Exp $

*gf2x-1.0 (14 May 2011)

  14 May 2011; Thomas Kahle <tomka@gentoo.org> -gf2x-0.3.1.ebuild,
  -files/gf2x-0.3.1-shared.patch, +gf2x-1.0.ebuild:
  bump to 1.0 (bug #366947), remove old

  24 Dec 2010; Fabian Groffen <grobian@gentoo.org> gf2x-0.9.5.ebuild:
  Marked ~x86-linux, ~amd64-linux and ~ppc-macos, bug #341989

  09 Feb 2010; Pacho Ramos <pacho@gentoo.org> gf2x-0.9.5.ebuild:
  amd64 stable, bug 300655

  19 Jan 2010; nixnut <nixnut@gentoo.org> gf2x-0.9.5.ebuild:
  ppc stable #300655

  15 Jan 2010; Christian Faulhammer <fauli@gentoo.org> gf2x-0.9.5.ebuild:
  stable x86, bug 300655

  30 Nov 2009; Joseph Jezak <josejx@gentoo.org> gf2x-0.9.5.ebuild:
  Marked ~ppc for bug #294338.

*gf2x-0.9.5 (10 Aug 2009)

  10 Aug 2009; Sébastien Fabbro <bicatali@gentoo.org> +gf2x-0.9.5.ebuild:
  Version bump, using real packaging system

  10 Aug 2009; Sébastien Fabbro <bicatali@gentoo.org> gf2x-0.3.1.ebuild:
  Add include files.

*gf2x-0.3.1 (10 Aug 2009)

  10 Aug 2009; Sébastien Fabbro <bicatali@gentoo.org> +gf2x-0.3.1.ebuild,
  +files/gf2x-0.3.1-shared.patch, +metadata.xml:
  Initial import
