@@ -4,13 +4,14 @@ Hash: SHA256
 DIST gf2x-0.9.5.tar.gz 420758 RMD160 14879ce9ce80932ec6f352ce4a0706b3b0bbe37b SHA1 13e8fc2f9b4310cbbcba09c3264201b368f7672a SHA256 3b0b3351ce649864b3b87f2fee775fdc786de7e933b84edd225c1ce5046e37b1
 DIST gf2x-1.0.tar.gz 460810 RMD160 e3b507485cfb25aab4bb25bcd5f134bf97ab8448 SHA1 137fd73f116a590ec7c5f72068f2d3c3144d697e SHA256 b64ffa9275cc2e995d37bcecbcdce9ba1df1e17d3d31d8685128d00df305e753
 EBUILD gf2x-0.9.5.ebuild 715 RMD160 fa91615c694148a3d9a18b59db5ddd1be264abde SHA1 6ec8f4e9ad2385296cbffc2db21932ca8f2b6f6e SHA256 865bfc554fbd201051975fd2290e2f6c549e648eccb3634c68d38fd7b6d998b9
+EBUILD gf2x-1.0-r1.ebuild 913 RMD160 79275036c6b2246d4610eaf51b4c6434ecfb0917 SHA1 f4669602e572e884e88d8d1e3767a8b5fcb1a638 SHA256 18a78adc0d7153cdf20e66c03280423470b3002146ebb105643f3df10b6d762c
 EBUILD gf2x-1.0.ebuild 714 RMD160 09afcb8c0176d76799b9709476a02a3894709777 SHA1 40581cc008df89240ce130510632ccb1eeffac50 SHA256 d696ad48b250705dc4c487d67f0ad2f9a2c301cd0f18c52813b0a4d6f4f4c5ce
-MISC ChangeLog 1304 RMD160 33dbc9073c71840d5586e84ff86ca5ac2f435c40 SHA1 dfe88b3606fc1743a8b659e3a019c1d11b84883b SHA256 adfaa17bde1ec0df13c71458a8dad9050e5c30515766dc38e4e3d77b93008ff1
+MISC ChangeLog 1448 RMD160 76c25cb81e1a669a44645eca9b593db65c872981 SHA1 2aff59fb5f2dc4f1f1e3db9139d103858cdcdf74 SHA256 f116a675f343e31c1942f43da732d92fe0226c3f3ad8aeefeb151fe390c05ed9
 MISC metadata.xml 390 RMD160 ad4645f086f7aa3d3c61e732cfafcae74dafac58 SHA1 a1beacd9a49d5a7c7ff8183060a8506c3104dae8 SHA256 09ee56bb919e6e3a4732c96f6fa234881e271036bc6c9a57f9c62d0dc06ab8f1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk3OUPsACgkQodBTJSDyo64lMQD6Ajy5YEXSmsjOfVbA8l9WQlI/
-Rg15wASp+rlV8SRMLU0A/RZVT2oji3Vr4X0aV7v63yYjLPGEN9bCgO6G1jf8R62d
-=kEHR
+iF0EAREIAAYFAk4W6ekACgkQodBTJSDyo6788AD3Q8d+OzwFV9j5eCn/fqwT+Cvq
+Aoe9Mfj90+jEdkpMogD+OxxzhHVGnuXQFyOhpLOG7hFFXM80yZsuky4H0PWue4E=
+=0dZn
 -----END PGP SIGNATURE-----
